filegroup(
    name = "render-test-files",
    srcs = glob(
        [
            "integration/**",
            "tests/**",
            "linux-gcc8-release/**",
            "ignores/**",
            "ios-render-test-runner/**",  # iOS only
            "expectations/platform-ios/**",  # iOS only
            "expectations/platform-linux/**",
        ],
    ) + select({
        "//:metal_renderer": glob(["expectations/platform-ios-metal/**"]),  # iOS Metal only
        "//conditions:default": [],
    }) + [
        "cache-metrics.db",
        "cache-style.db",
        "ios-metal-render-test-runner-metrics.json",  # iOS Metal only
        "ios-metal-render-test-runner-style.json",  # iOS Metal only
        "ios-render-test-runner-metrics.json",  # iOS only
        "ios-render-test-runner-style.json",  # iOS only
        "linux-gcc8-release-metrics.json",
        "linux-gcc8-release-style.json",
        "linux-opengl.json",
    ],
    visibility = [
        "//platform/ios/test/common:__pkg__",
        "//render-test:__subpackages__",
    ],
)

filegroup(
    name = "expression-test-files",
    srcs = glob(["integration/expression-tests/**"]) + [
        "ignores/platform-all.json",
    ],
    visibility = [
        "//expression-test:__pkg__",
    ],
)
